[package]
name = "qduct"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base256 = { version = "0.4.2", features = ["encode_pgp"] }
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
inquire = "0.7.5"
quinn = "0.11.8"
rcgen = "0.14.3"
ring = "0.17.14"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20"}
